--- a/src/main/resources/templates/addtodo.html
+++ b/src/main/resources/templates/addtodo.html
@@ -7,26 +7,26 @@
     <div class="row">
         <div class="col-md-8">
             <div class="content-section">
-                <form method="POST">
+                <form th:action="@{/add-todo}" th:object="${todo}"  method="POST">
 
                     <fieldset class="form-group">
                         <legend class="border-bottom mb-4">Blog Post</legend>
                         <div class="form-group row">
                             <label for="name" class="col-sm-2 col-form-label">Name</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="name" placeholder="name">
+                                <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="name">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="decription" class="col-sm-2 col-form-label">Description</label>
+                            <label for="description" class="col-sm-2 col-form-label">Description</label>
                             <div class="col-sm-10">
-                                <textarea cols="15" class="form-control" id="decription" placeholder="description of to do"></textarea>
+                                <textarea cols="15" class="form-control" id="description" th:field="*{description}" placeholder="description of to do"></textarea>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="dateDue" class="col-sm-2 col-form-label">Date Due</label>
                             <div class="col-sm-10">
-                                <input type="date" class="form-control" id="dateDue" placeholder="date to do is due?">
+                                <input type="date" class="form-control" th:field="*{dateDue}" id="dateDue" placeholder="date to do is due?">
                             </div>
                         </div>
                     </fieldset>
