--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -1,23 +1,18 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
   <head th:fragment="header">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
     <title>To-Do Application</title>
 
-    <link href="css/main.css" rel="stylesheet"></link>
-    <link href="webjars/font-awesome/5.10.1/css/fontawesome.min.css" rel="stylesheet"></link>
-    <link href="webjars/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"></link>
+    <link th:href="@{css/main.css}" rel="stylesheet" />
+    <link th:href="@{webjars/font-awesome/5.10.1/css/fontawesome.min.css}" rel="stylesheet" />
+    <link th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}" rel="stylesheet" />
 
   </head>
 
   <body>
   <header th:fragment="nav-bar" class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">To-Do App</a>
+      <a class="navbar-brand" th:href="@{/home}">To-Do App</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,16 +20,16 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" th:href="@{/home}">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Today</a>
+            <a class="nav-link" th:href="@{/today}">Today</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" th:href="@{/get-add-todo}">Manage</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Calendar</a>
+            <a class="nav-link" th:href="@{/calendar}">Calendar</a>
           </li>
           <li class="nav-item dropdown">
             <div class="dropdown-menu" aria-labelledby="dropdown01">
@@ -67,10 +62,10 @@
       </div>
     </div>
     <div th:fragment="scripts">
-		<script type="text/javascript" src="webjars/jquery/3.0.0/jquery.js"></script>
-		<script type="text/javascript" src="webjars/popper.js/1.15.0/dist/popper.js"></script>
+		<script type="text/javascript" th:src="@{webjars/jquery/3.0.0/jquery.js}"></script>
+		<script type="text/javascript" th:src="@{webjars/popper.js/1.15.0/dist/popper.js}"></script>
 			
-		<script type="text/javascript" src="webjars/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+		<script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 	</div>
   </body>
 </html>
